--- a/package.json
+++ b/package.json
@@ -8,15 +8,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.4.0",
+    "@mui/styles": "^5.3.0",
+    "material-ui-popup-state": "^2.0.0",
+    "mui-color": "^2.0.0-beta.2",
     "next": "12.0.10",
+    "qrcode.react": "^1.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.25.3"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
+    "@types/qrcode.react": "^1.0.2",
     "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.18",
     "typescript": "4.5.5"
   }
 }
